# hate-speech-detection

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.yml  pyproject.toml  settings.toml
migrations/: env.py
migrations/versions/: 0001_add_llm_run_table.py  0001_init_llm_prompt_run.py  0002_add_detect_hate_speech_res.py  0002_add_detect_hate_speech_table.py
src/: app.py  config.py  llm.py  llm_detect_hate_speech.py  logging.py  models.py  prompts.py
src/db/: __init__.py  models.py
src/llm/: __init__.py  detect_hate_speech.py  prompts.py
tests/: __init__.py  conftest.py  test_detect_hate_speech.py  test_llm_detect_hate_speech.py  test_prompts.py
tests/api/: test_detect_hate_speech.py  test_health_endpoint.py
tests/data/: hatexplain.py
tests/db/: test_migrations.py
tests/llm/: test_detect_hate_speech.py  test_prompts.py
